--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -298,10 +298,10 @@
         android:layout_marginBottom="4dp"
         android:background="@drawable/selected_txt_back"
         android:gravity="center"
-        android:hint="Price"
         app:layout_constraintBottom_toTopOf="@+id/linear_layout"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="@+id/linear_layout"
+        tools:text="12345 ₽"
         />
 
     <TextView
@@ -330,13 +330,13 @@
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
-        android:hint="Amount"
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/normal_text_size"
         app:layout_constraintEnd_toEndOf="@+id/linear_layout"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/txt_price"
+        tools:text="12345 kg"
          />
 
     <TextView
@@ -358,7 +358,7 @@
         style="@style/text_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/main_hint_text"
+        android:text="@string/hint_main"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/recycler_vew"
         app:layout_constraintEnd_toEndOf="parent"
