--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,9 +156,137 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1" />
 
+
         </LinearLayout>
 
+
     </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linear_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent">-->
+
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_1"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="1" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_2"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="2" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_3"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="3" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_measure_unit"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="Unt" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_4"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="4" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_5"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="5" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_6"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="6" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_clean"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="CLr" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_7"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="7" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_8"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="8" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_9"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="9" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_ok"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="OK" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_dot"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="." />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_0"-->
+<!--                style="@style/button_style"-->
+<!--                android:text="0" />-->
+
+<!--            <ImageButton-->
+<!--                android:id="@+id/btn_del"-->
+<!--                style="@style/button_style"-->
+<!--                app:srcCompat="@drawable/ic_backspace" />-->
+
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_margin="2dp"-->
+<!--                android:layout_weight="1" />-->
+
+
+<!--        </LinearLayout>-->
+
+
+<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/txt_price"
@@ -168,13 +296,29 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:background="@drawable/selected_txt_back"
+        android:background="@drawable/unselected_txt_back"
         android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="@+id/linear_layout"
+        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/txt_amount"
         tools:text="12345 ₽"
         />
+
+<!--    <TextView-->
+<!--        android:id="@+id/txt_currency"-->
+<!--        style="@style/text_style"-->
+<!--        android:text="@string/ruble"-->
+<!--        tools:layout_editor_absoluteX="125dp"-->
+<!--        tools:layout_editor_absoluteY="306dp" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/divider"-->
+<!--        style="@style/text_style"-->
+<!--        android:text=" / "-->
+<!--        android:textSize="22sp"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:layout_editor_absoluteX="244dp"-->
+<!--        tools:layout_editor_absoluteY="303dp" />-->
 
     <TextView
         android:id="@+id/txt_amount"
@@ -182,16 +326,17 @@
         android:layout_height="@dimen/value_txt_height"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/unselected_txt_back"
+        android:background="@drawable/selected_txt_back"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/normal_text_size"
-        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/txt_price"
+        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="@+id/linear_layout"
+
         tools:text="12345 kg"
          />
 
