--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -146,7 +147,6 @@
             <ImageView
                 android:id="@+id/btn_del"
                 android:scaleType="center"
-
                 style="@style/button_style"
                 app:srcCompat="@drawable/ic_backspace" />
 
@@ -156,137 +156,10 @@
                 android:layout_margin="2dp"
                 android:layout_weight="1" />
 
-
         </LinearLayout>
 
 
     </LinearLayout>
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linear_layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent">-->
-
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_1"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="1" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_2"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="2" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_3"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="3" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_measure_unit"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="Unt" />-->
-
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_4"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="4" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_5"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="5" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_6"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="6" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_clean"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="CLr" />-->
-
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_7"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="7" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_8"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="8" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_9"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="9" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_ok"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="OK" />-->
-
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_dot"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="." />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_0"-->
-<!--                style="@style/button_style"-->
-<!--                android:text="0" />-->
-
-<!--            <ImageButton-->
-<!--                android:id="@+id/btn_del"-->
-<!--                style="@style/button_style"-->
-<!--                app:srcCompat="@drawable/ic_backspace" />-->
-
-<!--            <View-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="0dp"-->
-<!--                android:layout_margin="2dp"-->
-<!--                android:layout_weight="1" />-->
-
-
-<!--        </LinearLayout>-->
-
-
-<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/txt_price"
@@ -301,24 +174,8 @@
         app:layout_constraintEnd_toEndOf="@+id/linear_layout"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/txt_amount"
-        tools:text="12345 ₽"
-        />
+        tools:text="12345 ₽" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/txt_currency"-->
-<!--        style="@style/text_style"-->
-<!--        android:text="@string/ruble"-->
-<!--        tools:layout_editor_absoluteX="125dp"-->
-<!--        tools:layout_editor_absoluteY="306dp" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/divider"-->
-<!--        style="@style/text_style"-->
-<!--        android:text=" / "-->
-<!--        android:textSize="22sp"-->
-<!--        android:textStyle="bold"-->
-<!--        tools:layout_editor_absoluteX="244dp"-->
-<!--        tools:layout_editor_absoluteY="303dp" />-->
 
     <TextView
         android:id="@+id/txt_amount"
@@ -336,9 +193,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linear_layout"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="@+id/linear_layout"
-
-        tools:text="12345 kg"
-         />
+        tools:text="12345 kg" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -360,7 +215,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.49" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
