--- a/app/src/main/res/layout/product_item2.xml
+++ b/app/src/main/res/layout/product_item2.xml
@@ -6,7 +6,10 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:cardCornerRadius="@dimen/card_radius"
     android:background="@color/colorBackgroundCard"
     app:cardElevation="4dp">
