--- a/app/src/main/res/drawable/min_price_background.xml
+++ b/app/src/main/res/drawable/min_price_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorBackgroundCard"/>
+    <solid android:color="@color/colorImageGood"/>
     <stroke android:color="@android:color/black"/>
-    <stroke android:width="3dp"/>
-    <corners android:radius="@dimen/card_radius"/>
+    <stroke android:width="1dp"/>
+    <corners android:radius="3dp"/>
 </shape>
