--- a/app/src/main/res/drawable/min_price_background.xml
+++ b/app/src/main/res/drawable/min_price_background.xml
@@ -4,5 +4,5 @@
     <solid android:color="@color/colorImageGood"/>
     <stroke android:color="@android:color/black"/>
     <stroke android:width="1dp"/>
-    <corners android:radius="3dp"/>
+    <corners android:radius="@dimen/background_highlight_radius"/>
 </shape>
