--- a/app/src/main/res/drawable/neutral_price_background.xml
+++ b/app/src/main/res/drawable/neutral_price_background.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorBackgroundCard"/>
-    <corners android:radius="3dp"/>
+    <corners android:radius="@dimen/background_highlight_radius"/>
 </shape>
