--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,211 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackgroundMain"
-    tools:context=".ui.MainActivity">
+    android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_vew"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/txt_price"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/product_item4" />
+        android:layout_height="match_parent"
+        android:background="@color/colorBackgroundMain"
+        tools:context=".ui.MainActivity">
 
-    <View
-        android:id="@+id/horizontal_divider"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/keyboard_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_vew" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_vew"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/txt_price"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/product_item4" />
 
-    <LinearLayout
-        android:id="@+id/linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
+        <View
+            android:id="@+id/horizontal_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/keyboard_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_vew" />
 
         <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/btn_1"
-                style="@style/button_style"
-                android:text="1" />
 
-            <TextView
-                android:id="@+id/btn_2"
-                style="@style/button_style"
-                android:text="2" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/btn_3"
-                style="@style/button_style"
-                android:text="3" />
+                <TextView
+                    android:id="@+id/btn_1"
+                    style="@style/button_style"
+                    android:text="1" />
 
-            <TextView
-                android:id="@+id/btn_measure_unit"
-                style="@style/button_style"
-                android:text="@string/btn_unit_title" />
+                <TextView
+                    android:id="@+id/btn_2"
+                    style="@style/button_style"
+                    android:text="2" />
+
+                <TextView
+                    android:id="@+id/btn_3"
+                    style="@style/button_style"
+                    android:text="3" />
+
+                <TextView
+                    android:id="@+id/btn_measure_unit"
+                    style="@style/button_style"
+                    android:text="@string/btn_unit_title" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/btn_4"
+                    style="@style/button_style"
+                    android:text="4" />
+
+                <TextView
+                    android:id="@+id/btn_5"
+                    style="@style/button_style"
+                    android:text="5" />
+
+                <TextView
+                    android:id="@+id/btn_6"
+                    style="@style/button_style"
+                    android:text="6" />
+
+                <TextView
+                    android:id="@+id/btn_clean"
+                    style="@style/button_style"
+                    android:text="CLR" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/btn_7"
+                    style="@style/button_style"
+                    android:text="7" />
+
+                <TextView
+                    android:id="@+id/btn_8"
+                    style="@style/button_style"
+                    android:text="8" />
+
+                <TextView
+                    android:id="@+id/btn_9"
+                    style="@style/button_style"
+                    android:text="9" />
+
+                <TextView
+                    android:id="@+id/btn_ok"
+                    style="@style/button_style"
+                    android:text="OK" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/btn_dot"
+                    style="@style/button_style"
+                    android:text="." />
+
+                <TextView
+                    android:id="@+id/btn_0"
+                    style="@style/button_style"
+                    android:text="0" />
+
+                <ImageView
+                    android:id="@+id/btn_del"
+                    android:scaleType="center"
+                    style="@style/button_style"
+                    app:srcCompat="@drawable/ic_backspace" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/txt_price"
+            style="@style/price_and_amount_style"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/value_txt_height"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/selected_txt_back"
+            app:layout_constraintBottom_toTopOf="@+id/linear_layout"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/linear_layout"
+            tools:text="12345 ₽" />
+
+
+        <TextView
+            android:id="@+id/txt_amount"
+            style="@style/price_and_amount_style"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/value_txt_height"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/unselected_txt_back"
+            app:layout_constraintEnd_toEndOf="@+id/linear_layout"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/txt_price"
+            tools:text="12345 kg" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-            <TextView
-                android:id="@+id/btn_4"
-                style="@style/button_style"
-                android:text="4" />
-
-            <TextView
-                android:id="@+id/btn_5"
-                style="@style/button_style"
-                android:text="5" />
-
-            <TextView
-                android:id="@+id/btn_6"
-                style="@style/button_style"
-                android:text="6" />
-
-            <TextView
-                android:id="@+id/btn_clean"
-                style="@style/button_style"
-                android:text="CLR" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/main_hint_text"
+            style="@style/text_style"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:text="@string/hint_main"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler_vew"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.49" />
 
-            <TextView
-                android:id="@+id/btn_7"
-                style="@style/button_style"
-                android:text="7" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/btn_8"
-                style="@style/button_style"
-                android:text="8" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-            <TextView
-                android:id="@+id/btn_9"
-                style="@style/button_style"
-                android:text="9" />
-
-            <TextView
-                android:id="@+id/btn_ok"
-                style="@style/button_style"
-                android:text="OK" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/btn_dot"
-                style="@style/button_style"
-                android:text="." />
-
-            <TextView
-                android:id="@+id/btn_0"
-                style="@style/button_style"
-                android:text="0" />
-
-            <ImageView
-                android:id="@+id/btn_del"
-                android:scaleType="center"
-                style="@style/button_style"
-                app:srcCompat="@drawable/ic_backspace" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_margin="2dp"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/txt_price"
-        style="@style/price_and_amount_style"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/value_txt_height"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/selected_txt_back"
-        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="@+id/linear_layout"
-        tools:text="12345 ₽" />
-
-
-    <TextView
-        android:id="@+id/txt_amount"
-        style="@style/price_and_amount_style"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/value_txt_height"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/unselected_txt_back"
-        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/txt_price"
-        tools:text="12345 kg" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <TextView
-        android:id="@+id/main_hint_text"
-        style="@style/text_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hint_main"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/recycler_vew"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
 
 
