--- a/app/src/main/res/layout/product_item4.xml
+++ b/app/src/main/res/layout/product_item4.xml
@@ -35,11 +35,11 @@
             android:id="@+id/highlighting_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/min_price_background"
             app:layout_constraintBottom_toBottomOf="@+id/item_cur_price"
             app:layout_constraintEnd_toEndOf="@+id/item_dif_title"
             app:layout_constraintStart_toStartOf="@+id/item_dif_title"
-            app:layout_constraintTop_toTopOf="@+id/item_cur_price" />
+            app:layout_constraintTop_toTopOf="@+id/item_cur_price"
+            tools:background="@drawable/min_price_background"/>
 
         <TextView
             android:id="@+id/item_cur_price"
