--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="colorBackgroundMain">#f0f0f0</color>
     <color name="colorBackgroundCard">#fcfeff</color>
     <color name="colorImageGood">#07CD65</color>
-    <color name="colorImageBad">#E60B25</color>
+    <color name="colorImageBad">@android:color/holo_red_light</color>
 
     <color name="colorSelectedText">#FFFF8D</color>
     <color name="colorValueTextBack">#EBFADC</color>
