--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="large_text_size">32sp</dimen>
     <dimen name="value_txt_height">40dp</dimen>
     <dimen name="card_radius">8dp</dimen>
+    <dimen name="background_highlight_radius">3dp</dimen>
 </resources>
