--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -167,8 +167,9 @@
 
         </LinearLayout>
 
+
         <TextView
-            android:id="@+id/txt_price"
+            android:id="@+id/txt_amount"
             style="@style/price_and_amount_style"
             android:layout_width="0dp"
             android:layout_height="@dimen/value_txt_height"
@@ -179,11 +180,10 @@
             app:layout_constraintBottom_toTopOf="@+id/linear_layout"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="@+id/linear_layout"
-            tools:text="12345 ₽" />
-
+            tools:text="12345 kg" />
 
         <TextView
-            android:id="@+id/txt_amount"
+            android:id="@+id/txt_price"
             style="@style/price_and_amount_style"
             android:layout_width="0dp"
             android:layout_height="@dimen/value_txt_height"
@@ -192,8 +192,42 @@
             android:background="@drawable/unselected_txt_back"
             app:layout_constraintEnd_toEndOf="@+id/linear_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="@+id/txt_price"
-            tools:text="12345 kg" />
+            app:layout_constraintTop_toTopOf="@+id/txt_amount"
+            tools:text="12345 ₽" />
+
+
+
+
+
+
+
+        <!--        <TextView-->
+<!--            android:id="@+id/txt_price"-->
+<!--            style="@style/price_and_amount_style"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="@dimen/value_txt_height"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_marginBottom="4dp"-->
+<!--            android:background="@drawable/selected_txt_back"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/linear_layout"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/guideline"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/linear_layout"-->
+<!--            tools:text="12345 ₽" />-->
+
+
+<!--        <TextView-->
+<!--            android:id="@+id/txt_amount"-->
+<!--            style="@style/price_and_amount_style"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="@dimen/value_txt_height"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:background="@drawable/unselected_txt_back"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/linear_layout"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/guideline"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/txt_price"-->
+<!--            tools:text="12345 kg" />-->
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
